--- a/style.css
+++ b/style.css
@@ -1,626 +1,203 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
 *{
-
-    padding: 0;
     margin: 0;
-}
-body {
-    background-color: white;
+    padding: 0;
     font-family: 'Rubik', sans-serif;
 }
-
-nav {
+body{
+    width: 100%;
+}
+nav{
+    margin: 20px 150px 0 110px;
     display: flex;
     justify-content: space-between;
-    margin: 50px 160px;
     align-items: center;
-
 }
-
+nav svg{
+    background-color: white;
+}
+nav ul {
+    background-color: white;
+}
 nav li {
-    margin-right: 50px;
-    list-style: none;
-    font-size: 14px;
-    font-weight: 300;
-    color: hsl(229, 8%, 60%);
+    display: inline;
+    margin-right: 40px;
 }
-.hamburger{
-    visibility: hidden;
+nav li:hover{
+    color: hsl(0, 94%, 66%);
 }
-
-.list ul {
-    display: flex;
-    align-items: center;
+nav li button{
+    width: 100px;
+    height: 40px;
+    color: white;
+    font-weight:lighter;
+    background: hsl(0, 94%, 66%) ;
+    border-radius: 5px;
+    border: none;
 }
-
-nav li:hover {
-    text-decoration: underline;
+nav li button:hover{
+    background: white;
+    border: 1px solid hsl(0, 94%, 66%);
     color: hsl(0, 94%, 66%);
 }
 
-li button {
-    background-color: hsl(0, 94%, 66%);
-    color: white;
-    width: 105px;
-    height: 40px;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-
-
+nav img{
+    display: none;
 }
-
-.mobile-nav {
-    visibility: hidden;
-}
-
-.container {
+.container{
     display: flex;
+    margin: 60px 0 0 110px;
     justify-content: space-between;
     position: relative;
 }
-
-.content {
-    width: 480px;
-    margin-left: 160px;
-    bottom: 0;
-    background-color: white;
-    height: fit-content;
-    margin-top: 90px;
+.content::before{
+    position: absolute;
+    content: '';
+    height: 324px;
+    width: 490px;
+    background-color: hsl(231, 69%, 60%);
+    border-bottom-left-radius: 50%;
+    right: 0;
+    z-index: -1;
+    bottom: -20px;
 }
-
+.container img {
+    margin-right: 40px;
+}
+.content{
+    margin-top: 81px;
+}
 .content h1 {
-    font-size: 40px;
+    margin-bottom: 29px;
+    font-size: 45px;
+    width: 450px;
 }
 
-p {
-    font-size: 18px;
+.content p {
     color: hsl(229, 8%, 60%);
-    font-weight: 200;
+    word-wrap: normal;
+    line-height: 25px;
+    width: 470px;
+    margin-bottom: 25px
 }
 
-.image {
-    margin-right: 90px;
-}
-
-.image img {
-    height: 466px;
-    width: 657px;
-}
-
-.btns button {
+.btns button{
+    font-size: 18px;
     width: 170px;
     height: 50px;
-    font-size: 16px;
-    border-radius: 5px;
     border: none;
-    background: whitesmoke;
-    color: hsl(229, 31%, 21%);
-    ;
-    justify-content: space-between;
-    cursor: pointer;
+    border-radius: 5px;
 }
 
-.btns button:nth-child(1) {
-    background: hsl(231, 69%, 60%);
+.btns button:hover, .btns button:first-child:hover {
+    border: 1px solid hsl(231, 69%, 60%);
+    color: hsl(231, 69%, 60%);
+    background: white;
+}
+.btns button:first-child{
+    background:  hsl(231, 69%, 60%);
     color: white;
+    margin-right: 15px;
 }
-
-.container::before {
-    content: '';
-    position: absolute;
-    height: 350px;
-    width: 570px;
-    background: hsl(231, 69%, 60%);
-    z-index: -1;
-    right: 0;
-    top: 135px;
-    border-bottom-left-radius: 200px;
-}
-
-.features {
-    margin: 0 430px;
+.features{
+    margin: 88px auto;
+    width: 737px;
     text-align: center;
+    
+}
+.features p{
     width: 530px;
-    height: 260px;
-    font-weight: 100;
-    font-size: 18px;
+    margin: 10px auto;
+    color: hsl(229, 8%, 60%);
 }
-
-.features ul {
+.features ul{
     display: flex;
-    align-items: center;
+    justify-content: space-around;
+    color: hsl(229, 8%, 60%);
 }
-
-.features li {
-    margin-right: 50px;
+.features ul li{
+    width: 245px;
+    padding: 15px;
     list-style: none;
-    font-size: 14px;
-    font-weight: 300;
-    opacity: 0.8;
 }
-
-.click {
+.features ul li:hover{
+    border-bottom: 2px solid hsl(0, 94%, 66%);;
+}
+.click{
     display: flex;
-    justify-content: space-between;
     position: relative;
+    margin-bottom: 200px;
 }
-
-.click img {
-    margin-left: 100px;
+.image1{
+    margin-left: 130px;
+    margin-right: 110px;
 }
-
-.content2 {
-    width: 430px;
-    margin-right: 160px;
-    bottom: 0;
-    font-size: 18px;
-    margin-top: 70px;
-    font-weight: 100;
-
-}
-
-.content2 h2 {
-    font-size: 30px;
-}
-
-.content2::before {
-    content: '';
+.image1::before{
     position: absolute;
-    height: 350px;
-    width: 600px;
-    background: hsl(231, 69%, 60%);
-    z-index: -1;
+    content: '';
+    height: 324px;
+    width: 590px;
+    background-color: hsl(231, 69%, 60%);
+    border-bottom-right-radius: 50%;
     left: 0;
-    top: 135px;
-    border-bottom-right-radius: 200px;
+    z-index: -1;
+    bottom: -20px;
 }
-
-.btn1 button {
+.content2{
+    margin-top: 88px;
+    width: 451px;
+}
+.content2 p {
+    line-height: 25px;
+    color: hsl(229, 8%, 60%);
+}
+.click button{
+    margin-top: 35px;
     width: 110px;
     height: 50px;
-    color: white;
+    border: none;
     background: hsl(231, 69%, 60%);
     border-radius: 5px;
-    border: none;
-    font-size: 14px;
-    margin-top: 40px;
-    cursor: pointer;
+    color: white;
 }
-
-.download {
-    margin: 0 160px;
+.download{
+    width: fit-content;
+    margin: 0 auto;
+    margin-bottom: 75px;
     text-align: center;
-    margin-top: 170px;
+    
 }
-
-.download p {
-    margin: 0 280px;
+.download p{
+    margin-top: 30px;
+    width: 530px;
+    color: hsl(229, 8%, 60%);
 }
-
 .browser {
     display: flex;
+    gap: 30px;
     text-align: center;
-    gap: 15px;
     width: fit-content;
-    margin: 50px auto;
+    margin: 0 auto
 }
-
-
-.shape {
-    background: white;
-    width: 280px;
-    height: 370px;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    margin-right: 30px;
-    border-radius: 10px;
-    border: navajowhite;
+.shape{
+    width: 270px;
+    height: 355px;
+    padding: 33px 20px;
 }
-
-img {
-    margin-top: 50px;
-    margin-bottom: 20px;
+.shape h3 {
+    margin-top: 33px;
+    margin-bottom: 20px
 }
-
-button {
-    margin-top: 20px;
+.shape p{
+    padding-bottom: 40px;
+    border-bottom: 1px dashed hsl(229, 8%, 60%);
+}
+.shape button{
+    margin: 25px;
     width: 230px;
     height: 50px;
     background: hsl(231, 69%, 60%);
-    border: none;
-    border-radius: 5px;
     color: white;
-    cursor: pointer;
-}
-
-.dotted {
-    border-top: 3px dotted #bbb;
-    opacity: o.3;
-    margin-top: 20px;
-}
-
-.firefox {
-    margin-top: 40px;
-}
-
-.opera {
-    margin-top: 80px;
-}
-
-.questions {
-    margin-top: 170px;
-    text-align: center;
-}
-
-.questions p {
-    margin-left: 450px;
-    margin-right: 450px;
-    margin-bottom: 60px;
-    font-size: 18px;
-}
-
-details [open] summary~* {
-    animation: open 0.3s ease-in-out;
-}
-
-@keyframes open {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
-details summary::-webkit-detail -marker {
-    display: none;
-}
-
-details summary {
-    width: 540px;
-    padding: 5px 0;
-    border-top: 1px solid hsl(229, 8%, 60%);
-    position: relative;
-    cursor: pointer;
-    font-size: 18px;
-    font-weight: 400;
-    list-style: none;
-
-    display: flex;
-    justify-content: space-between;
-    text-align: left;
-    align-items: center;
-    margin: auto;
-}
-
-details summary::after {
-    content: '';
-    color: red;
-    position: absolute;
-    font-size: 18px;
-    line-height: 0;
-    font-weight: 200;
-    margin-top: 0.75rem;
-    right: 0;
-    transform-origin: center;
-    transition: 200mslinear;
-}
-
-details[open] summary::after {
-    transform: rotate(45deg);
-    font-size: 2rem;
-}
-
-details summary {
-    outline: 0;
-}
-
-details p {
-    font-size: 0.95rem;
-    margin: 0 01rem;
-    padding-top: 1rem;
-}
-
-.btn button {
-    width: 115px;
-    margin-top: 50px;
-}
-
-
-section {
-    background: hsl(231, 69%, 60%);
-    margin-top: 100px;
-    text-align: center;
-    padding: 50px 0;
-    color: white;
-}
-
-section p {
-    color: white;
-    letter-spacing: 5px;
-}
-
-.input input {
-    height: 40px;
-    padding: 5px;
-    width: 300px;
-    margin-right: 15px;
     border-radius: 5px;
     border: none;
-}
-
-.input button {
-    background: hsl(0, 94%, 66%);
-    width: 125px;
-}
-
-footer {
-    background: hsl(229, 31%, 21%);
-    padding: 10px 158px;
-    display: flex;
-    color: white;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.footer {
-    display: flex;
-    align-items: center;
-    gap: 60px;
-}
-
-.footer ul {
-    list-style: none;
-    display: flex;
-    margin-right: 50px;
-}
-
-.footer li {
-    padding: 0 20px;
-}
-
-.footer-container {
-    display: flex;
-    gap: 50px;
-}
-
-
-
-@media screen and (max-width: 375px) {
-
-    nav {
-        margin: 0;
-        padding: 0;
-        display: flex;
-        align-items: center;
-    }
-    nav img, nav svg{
-        margin: 0 !important;
-        padding: 0;
-    }
-    .hamburger{
-        visibility: visible;
-    }
-    .mobile-nav{
-        visibility: hidden !important;
-        position: absolute;
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        height: 100vh;
-        top: 0;
-        z-index: 100;
-        background-color: hsla(228, 63%, 17%, 0.936);;
-    }
-
-    .mobile-nav button {
-        width: 305px;
-        margin: 20px auto;
-        border: 2px solid #ffffff;
-        background: transparent;
-    }
-    .mobile-logo{
-        display: flex;
-        justify-content: space-between;
-        margin: 35px 30px 25px 30px;
-    }
-
-
-    .mb-menu {
-        margin: 0 auto;
-        width: 80%;
-    }
-    .mb-menu li:first-child{
-        padding-top: 20px;
-        border-top: .5px solid #ffffff33;
-
-    }
-    .mb-menu li {
-        margin: 25px auto;
-        color: white;
-        font-size: 18px;
-        letter-spacing: 4px;
-        text-align: center;
-        padding-bottom: 20px;
-        border-bottom: .5px solid #ffffff33;
-    }
-    .mobile-social-icon{
-        display: flex;
-        gap: 50px;
-        justify-content: center;
-        margin-top: 180px;
-    }
-
-    .list  {
-        display: none;
-    }
-
-    .mobile-nav {
-        visibility: visible;
-    }
-
-    .container {
-        flex-direction: column;
-    }
-
-    .container::before {
-        width: 267px;
-        height: 186px;
-        border-bottom-left-radius: 40%;
-        top: 96px;
-    }
-
-    .content {
-        width: fit-content;
-        margin: auto;
-        order: 2;
-    }
-
-    .content h1 {
-        font-size: 30px;
-        text-align: center;
-    }
-
-    .content p {
-        text-align: center;
-    }
-
-    .btns button {
-        margin-left: 25px;
-    }
-
-    .image img,
-    .image1 img {
-        height: 204px;
-        width: 307px;
-    }
-
-    .image {
-        margin: auto;
-        order: 1;
-    }
-
-    .click img {
-        margin-left: 30px;
-    }
-
-    .btns button {
-        width: 150px;
-        height: 50px;
-    }
-
-    .features {
-        margin: auto;
-        text-align: center;
-        width: fit-content;
-        height: 260px;
-    }
-
-    .features li {
-        margin: auto;
-    }
-
-    .features ul {
-        flex-direction: column;
-    }
-
-    .content2::before {
-        display: none;
-    }
-
-    .content2 h2 {
-        margin: 0 60px;
-        font-size: 20px;
-    }
-
-    .content2 p {
-        text-align: center;
-        margin-right: 70px;
-    }
-
-    .btn1 button {
-        display: none;
-    }
-
-    .click::before {
-        content: '';
-        background-color: hsl(231, 69%, 60%);
-        left: 0;
-        position: absolute;
-        width: 267px;
-        height: 186px;
-        border-bottom-right-radius: 40%;
-        top: 96px;
-        z-index: -1;
-    }
-
-    .click {
-        flex-direction: column;
-    }
-
-    .download {
-        margin: 0%;
-        padding-top: 160px;
-
-    }
-
-    .download p {
-        margin: 0%;
-    }
-
-    .browser {
-        flex-direction: column;
-    }
-
-    .questions p {
-        margin: 0%;
-        padding-bottom: 80px;
-    }
-
-    details summary {
-        width: 300px;
-    }
-
-    section {
-        width: 375px;
-    }
-
-    .section {
-        text-align: center;
-        align-items: center;
-    }
-
-    .input button {
-        width: 300px;
-    }
-
-    .input {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .input input {
-        margin: 0;
-    }
-
-    footer,
-    .footer {
-        margin: 0;
-        padding: 30px 0;
-        height: fit-content;
-        flex-direction: column;
-    }
-
-    .footer ul {
-        flex-direction: column;
-    }
-
-    .footer li {
-        padding: 10px 0;
-        text-align: center;
-    }
-    
-    
 }
